# fastapi-bitrix-scent

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  auto_update_tokens.py  auxiliary_functions.py  config.py  docker-compose.yml  functions.py  handler.py  log_config.json  main.py  models.py  passenger_wsgi.py  ps.py  pyproject.toml  requirements.txt  session_manager.py
core/: config.py
db/: config.py  database.py  models.py
logs/: log_config.json
migrations/: env.py
models/: models.py
routing/: auth.py  concord.py  contacts.py  forms.py  universal.py  user.py  ved.py
src/: config.py  depends.py  exception_handlers.py  exceptions.py  logger.py  logging_config.py  main.py
src/api/v1/routing/: auth.py  concord.py  contacts.py  forms.py  universal.py  user.py  ved.py
src/db/: database.py
src/middleware/: logging.py  logging_middleware.py
src/migrations/: env.py
src/migrations/versions/: 242ff2bea6b4_initial.py
src/models/: bitrix.py  form.py
src/repositories/: base.py  bitrix.py  form.py
src/services/: bitrix.py  form.py  uow.py
src/templates/: create_forms.html  employee_testing.html  install.html
static/: create_forms.css  employee_testing.css  main.css  task_panel.css  task_panel.js
templates/: create_forms.html  employee_testing.html  install.html  main.html  task_panel.html
tests/: test_api.py
