[project]
name = "fastapi-bitrix-scent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2wsgi>=1.10.10",
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
]
